# rapidjson

./: CMakeLists.txt  rapidjsonConfig.cmake  tbuild.cfg
src/main/: CMakeLists.txt
src/main/rapidjson/: dummy.cpp
